--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
                 契約を結ぶとき、タイムカードを打つとき、紙や新しい機械は必要ありません。<br>
                 導入する機械もいりません。必要なのはスマートフォン1つです。
             </p>
+            <p>求人主から送られてきた契約書を確認し、スマートフォン上でサインすることで、契約は完了。<br>
+            求人主はサインが合成された契約書をPDFとして書き出すことが可能です。
+            </p>
+            <p>
+                タイムカードは旅行者に付与されるQRコードを読み取り、データーベースと照合して行います。
+            </p>
             <img src="imges/sign.png" alt="" class="sign">
         </v-col>
     </v-row>
