--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     icon
                     >
                     <a href="https://github.com/warf-20201020/warf">
-                    <v-icon size="24px">
+                    <v-icon size="24px" color="white">
                         {{ icon }}
                     </v-icon>
                     </a>
