--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <div id="app">
 <v-app>
 <v-main>
-    <div class="topbox"></div>
+    
+        <v-img height="80vh" src='imges/top.JPG'>
+            <h1 class="name">WaRf</h1>
+        </v-img>
+ 
     
     <v-row class="justify-center">
     <v-col class="col-10 col-sm-8 col-md-5">
